--- a/pacman.yml
+++ b/pacman.yml
@@ -21,7 +21,7 @@ jobs:
       - name: generate pacman-contribution-graph.svg
         uses: abozanona/pacman-contribution-graph@main
         with:
-          github_user_name: Yannarp
+          github_user_name: yannarp
 
 
       - name: push pacman-contribution-graph.svg to the output branch
