--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -13,7 +13,7 @@ on:
 jobs:
   generate:
     permissions:
-      contents: write
+      contents: black
     runs-on: ubuntu-latest
     timeout-minutes: 5
 
